--- a/SpringCloudConfigClient.properties
+++ b/SpringCloudConfigClient.properties
@@ -1,1 +1,1 @@
-lucky-word=ISureAmGladICheckedThisIntoAPublicRepoSoKenCouldReadIt
+"lucky-word=ISureAmGladICheckedThisIntoAPublicRepoSoKenCouldReadIt"
