--- a/SpringCloudConfigClient.properties
+++ b/SpringCloudConfigClient.properties
@@ -1,1 +1,3 @@
-lucky-word=ISureAmGladICheckedThisIntoAPublicRepoSoKenCouldReadIt
+#lucky-word=ISureAmGladICheckedThisIntoAPublicRepoSoKenCouldReadIt
+spring.application.name=SpringCloudConfigClient
+spring.cloud.config.uri=http://localhost:8090
