--- a/SpringCloudConfigClient.properties
+++ b/SpringCloudConfigClient.properties
@@ -1,3 +1,1 @@
-#lucky-word=ISureAmGladICheckedThisIntoAPublicRepoSoKenCouldReadIt
-spring.application.name=SpringCloudConfigClient
-spring.cloud.config.uri=http://localhost:8090
+lucky-word=ISureAmGladICheckedThisIntoAPublicRepoSoKenCouldReadIt
